--- a/redflix45 project/InitializrSpringbootProject/src/main/java/co/g2m2e1/redflix45/views/JPanelPeliculaC.form
+++ b/redflix45 project/InitializrSpringbootProject/src/main/java/co/g2m2e1/redflix45/views/JPanelPeliculaC.form
@@ -56,7 +56,7 @@
                   <Component id="jButtonGuardarP" alignment="3" min="-2" max="-2" attributes="0"/>
                   <Component id="jButtonLimpiarCampos" alignment="3" min="-2" max="-2" attributes="0"/>
               </Group>
-              <EmptySpace pref="19" max="32767" attributes="0"/>
+              <EmptySpace max="32767" attributes="0"/>
           </Group>
       </Group>
     </DimensionLayout>
@@ -91,6 +91,9 @@
     </Component>
     <Component class="javax.swing.JButton" name="jButtonGuardarP">
       <Properties>
+        <Property name="icon" type="javax.swing.Icon" editor="org.netbeans.modules.form.editors2.IconEditor">
+          <Image iconType="3" name="/agregar.png"/>
+        </Property>
         <Property name="text" type="java.lang.String" value="Crear"/>
       </Properties>
       <Events>
@@ -99,6 +102,9 @@
     </Component>
     <Component class="javax.swing.JButton" name="jButtonLimpiarCampos">
       <Properties>
+        <Property name="icon" type="javax.swing.Icon" editor="org.netbeans.modules.form.editors2.IconEditor">
+          <Image iconType="3" name="/basura.png"/>
+        </Property>
         <Property name="text" type="java.lang.String" value="Limpiar Campos"/>
       </Properties>
       <Events>
